# envsync

./: README.md  pyproject.toml
envsync/: cli.py  config.py  crypto.py  vault.py
envsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
envsync_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
envsync_secure.egg-info/: PKG-INFO  SOURCES.txt
tests/: .env  test_crypto.py
